# internal/api/router/router.go
@@ -27,7 +27,15 @@ func Router() *http.ServeMux {
 	mux.HandleFunc("PATCH /teachers/{id}", handlers.PatchOneTeacherHandler)
 	mux.HandleFunc("DELETE /teachers/{id}", handlers.DeleteOneTeacherHandler)
 
-	mux.HandleFunc("/students/", handlers.StudentsHandler)
+	mux.HandleFunc("GET /students", handlers.GetStudentsHandler)
+	mux.HandleFunc("POST /students", handlers.AddStudentHandler)
+	mux.HandleFunc("PATCH /students", handlers.PatchStudentsHandler)
+	mux.HandleFunc("DELETE /students", handlers.DeleteStudentsHandler)
+	
+	mux.HandleFunc("GET /students/{id}", handlers.GetOneStudentHandler)
+	mux.HandleFunc("PUT /students/{id}", handlers.UpdateStudentHandler)
+	mux.HandleFunc("PATCH /students/{id}", handlers.PatchOneStudentHandler)
+	mux.HandleFunc("DELETE /students/{id}", handlers.DeleteOneStudentHandler)
 
 	mux.HandleFunc("/execs/", handlers.ExecsHandler)
 
